# cen310-midterm-yoruk-ihsan

./: .gitignore  CMakeLists.txt  calculator_tests_unit_win.cov  calculatorapp_unit_win_cobertura.xml  convergence_data.csv  performance_data.csv  utility_tests_unit_win.cov
build_win/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  calculatorapp.sln
docs/coverxygenlibwin/: C__Users_yoruk_Desktop_cen310_midterm_yoruk_ihsan_src_calculator_header_calculator.h.html  C__Users_yoruk_Desktop_cen310_midterm_yoruk_ihsan_src_calculator_src_calculator.cpp.html  C__Users_yoruk_Desktop_cen310_midterm_yoruk_ihsan_src_calculatorapp_header_calculatorapp.h.html  C__Users_yoruk_Desktop_cen310_midterm_yoruk_ihsan_src_calculatorapp_src_calculatorapp.cpp.html  C__Users_yoruk_Desktop_cen310_midterm_yoruk_ihsan_src_utility_header_commonTypes.h.html  index.htm  index.html  main.js  (+3 more)
report_doc_lib_hist_win/: 2025-04-12_00-31-12_CoverageHistory.xml  2025-04-12_01-44-09_CoverageHistory.xml  2025-04-12_02-22-49_CoverageHistory.xml  2025-04-12_02-23-25_CoverageHistory.xml
report_doc_test_hist_win/: 2025-04-12_00-31-13_CoverageHistory.xml  2025-04-12_01-44-09_CoverageHistory.xml  2025-04-12_02-22-50_CoverageHistory.xml  2025-04-12_02-23-25_CoverageHistory.xml
report_test_hist_win/: 2025-04-12_02-23-05_CoverageHistory.xml
src/tests/: CMakeLists.txt  calculator_test.cpp  test_calculator.cpp
src/tests/calculator/: CMakeLists.txt  calculator_test.cpp
(+385 files in other folders)
